--- a/ACARI - Project/nbproject/project.properties
+++ b/ACARI - Project/nbproject/project.properties
@@ -46,6 +46,7 @@ javac.classpath=\
     ${file.reference.postgresql-9.4.1209.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.synthetica.jar}:\
+    ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.syntheticaBlackEye.jar}:\
     ${file.reference.syntheticaDark.jar}:\
     ${file.reference.syntheticaClassy.jar}:\
